commitMessage : fix issue: stop kafka or zookeeper failed when full command length reach 4096 bytes